[gd_scene load_steps=2 format=3 uid="uid://41aaovjjqlay"]

[ext_resource type="Script" uid="uid://dghq17vkdgtf8" path="res://data_source_manager_exmaple/example.gd" id="1_ied2g"]

[node name="Example" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ied2g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -54.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[connection signal="value_changed" from="VBoxContainer/ProgressBar" to="." method="_on_progress_bar_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
